scroll to offer

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 			<h1>DeezTruck</h1>
 			<p>Tasty food on wheels</p>
 			<button>
-				<a href="#"> Offer </a>
+				<a href="#offer"> Offer </a>
 			</button>
 		</section>
 
 		<section class="menu">
-			<h2>Menu</h2>
+			<h2 id="offer">Menu</h2>
 
 			<div class="menu__category">
 				<ul class="menu__list">
